# kerk_pptx_generator

./: .gitignore  README.md  config.toml  environment.yml  maakkerkpptx.spec  main.py  pyproject.toml  requirements.txt  version.txt
.github/workflows/: mypy.yml  pytest.yml
kerkpptxgenerator/: __init__.py  util.py
tests/: test_pptxgen.py
