[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kerkpptxgenerator"
version = "1.1.1"
description = "Generate pptx files"
readme = "README.md"
authors = [{ name = "Rolf Harkes", email = "r.harkes@nki.nl" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["powerpoint", "pkn"]
dependencies = [
    "toml",
    "Pillow",
    "python-pptx"
]
requires-python = ">=3.11"
[project.optional-dependencies]
dev = ["black", "bumpver", "pytest", "mypy", "setuptools", "build", "twine", "pyinstaller", "types-Pillow"]

[project.urls]
Homepage = "https://github.com/rharkes/kerk_pptx_generator"

[tool.bumpver]
current_version = "1.1.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"kerkpptxgenerator/version.py" = [
    "{version}"
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.mypy]
python_version = '3.11'
packages = "kerkpptxgenerator"
strict = true

[[tool.mypy.overrides]]
module = "pptx.*"
ignore_missing_imports  = true